Fix button content alignment (#35)
* Fix button content alignment

* change rgba(0, 0, 0, 0.0001) to transparent

--- a/src/styles/release-candidate/abstract/mixins/_ratios.scss
+++ b/src/styles/release-candidate/abstract/mixins/_ratios.scss
@@ -5,7 +5,7 @@
 
 @mixin aspect-ratio($width, $height) {
   position: relative;
-  &::before {
+  &:before {
     display: block;
     width: 100%;
     padding-top: ($height / $width) * 100%;
@@ -32,7 +32,7 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
-    &::after {
+    &:after {
       position: relative;
       width: 100%;
       height: 100%;
