--- a/src/styles/release-candidate/components/_c-button.scss
+++ b/src/styles/release-candidate/components/_c-button.scss
@@ -2,6 +2,7 @@
   display: inline-flex;
   vertical-align: middle;
   align-items: center;
+  justify-content: center;
   padding: 16px 24px;
   font-size: 13px;
   font-weight: 700;
